# TicketSystem

./: CMakeLists.txt  README.md
model/header/: ticket.h  user.h
model/source/: ticket.cpp  user.cpp
resources/: resources.qrc
resources/certs/: cert.pem
resources/sql/: deleteProject.sql  deleteTicketFilesByProject.sql  deleteTicketHistoryByProject.sql  deleteTicketsByProject.sql  getBossesIdAndFullName.sql  getChiefProjects.sql  getDepartmentIdByProject.sql  getDepartmentIdByUserId.sql  getDepartmentNameByUser.sql  getEmployeeProjects.sql  getEmployeesByDepartment.sql  getFullTicketInfoById.sql  getPrioritiesIdAndName.sql  getProjectIdByName.sql  getProjectsIdAndName.sql  getStatusesIdAndName.sql  getStatusesWithoutEnding.sql  getTicketFilePath.sql  getTicketFilesByTicketId.sql  getTicketHistoryByTicketId.sql  getTicketsByEmployee.sql  getTicketsByProject.sql  getTrackersIdAndName.sql  getUserDepartmentProjectStats.sql  getUserDoneTickets.sql  getUserInfoForEdit.sql  getUserLoginInfo.sql  getUserPasswordHash.sql  getUserProfileInfo.sql  getUserRoleById.sql  getUserTicketCountByPriority.sql  getUserTicketCountByStatus.sql  getUserTickets.sql  getUsersByDepartment.sql  getUsersIdAndFullName.sql  insertUser.sql  saveTicket.sql  saveTicketFile.sql  saveTicketHistory.sql  updateTicketInfo.sql  (+4 more)
resources/templates/: ticket_template.html
src/: main.cpp
src/header/: addemployeedialog.h  createprojectdialog.h  createticketdialog.h  editemployeedialog.h  loginwindow.h  mainwindow.h  myprojectstab.h  myticketstab.h  prioritydelegate.h  profiletab.h  ticketcard.h  userprofileeditdialog.h
src/source/: addemployeedialog.cpp  createprojectdialog.cpp  createticketdialog.cpp  editemployeedialog.cpp  loginwindow.cpp  mainwindow.cpp  myprojectstab.cpp  myticketstab.cpp  prioritydelegate.cpp  profiletab.cpp  ticketcard.cpp  userprofileeditdialog.cpp
ui/: createprojectdialog.ui  createticketdialog.ui  editemployeedialog.ui  loginwindow.ui  mainwindow.ui  myprojectstab.ui  myticketstab.ui  profiletab.ui  ticketcard.ui  tickettable.ui  userprofileeditdialog.ui
utils/header/: dbmanager.h  mailservice.h  mycertverifier.h  storagemanager.h  utils.h
utils/source/: dbmanager.cpp  mailservice.cpp  mycertverifier.cpp  storagemanager.cpp  utils.cpp
